# StreamerQtClient

./: CMakeLists.txt  Streamer.pro  client.js  dispatchqueue.cpp  fileparser.cpp  h264fileparser.cpp  h264rtspparser.cpp  h264rtspparser.h  helpers.hpp  index.html  main.cpp  opusrtspparser.cpp  opusrtspparser.h  rtspcapture.cpp  rtspcapture.h  rtspparser.cpp  rtspparser.h  stream.cpp  stream.hpp
libs/ffmpeg-6.1/lib/: libavdevice.60.3.100.dylib  libavfilter.9.12.100.dylib  libavformat.60.16.100.dylib  libavutil.58.29.100.dylib  libswresample.4.12.100.dylib  libswscale.7.5.100.dylib
libs/ffmpeg-6.1/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
